# ticket-system-kubernetes

./: .gitignore  CONTRIBUTING.md  KUBERNETES.md  LICENSE  README.md  RENDU_RAPPORT.md  docker-compose.yml
.github/workflows/: ci.yml
api-gateway/: index.js  package-lock.json  package.json
api-gateway/routes/: auth.js  tickets.js
auth-service/: Dockerfile  go.mod  go.sum  main.go
frontend/: Dockerfile  index.html  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  store.ts
frontend/src/pages/: DashboardPage.tsx  HomePage.tsx  LoginPage.tsx
k8s/: 00-namespace.yaml  01-configmap.yaml  02-secrets.yaml  03-postgres-pvc.yaml  04-redis-pvc.yaml  10-postgres.yaml  11-redis.yaml  20-auth-service.yaml  21-ticket-service.yaml  22-notification-service.yaml  23-api-gateway.yaml  24-frontend.yaml  30-ingress.yaml  kustomization.yaml
notification-service/: Dockerfile  index.js  package-lock.json  package.json
notification-service/__tests__/: index.test.js
ticket-service/: Dockerfile  main.py  pyproject.toml  requirements.txt
ticket-service/tests/: test_main.py
